tests/baselines/reference/noParameterReassignmentJSIIFE.errors.txt
tests/cases/compiler/index.js(13,1): error TS2304: Cannot find name 'SystemJS'.


==== tests/cases/compiler/index.js (1 errors) ====
    "use strict";
    
    self.importScripts = (function (importScripts) {
      return function () {
        setTimeout(function () {}, 0);
        return importScripts.apply(this, arguments);
      };
    })(importScripts);
    
    importScripts("../node_modules/systemjs/dist/system.js");
    importScripts("../systemjs.config.js");
    
    SystemJS.import("pdfjs/core/worker.js").then(function () {
    ~~~~~~~~
!!! error TS2304: Cannot find name 'SystemJS'.
        // Worker is loaded at this point.
    });